--- a/enigme.html
+++ b/enigme.html
@@ -68,7 +68,7 @@
         <!------------------- Deuxième section ---------------->
         <section class="second-section">
             <div class="words">
-                <h2> ENIGME NUMERO <span id="numero-enigme"></span></h2>
+                <h2> ENIGME NUMERO <span id="numero-enigmes" style="font-family: Arial, Helvetica, sans-serif; font-size: 1em;">Test</span></h2>
                 <p id="description-enigme"></p>
                 <h3 id="contenu-enigme"></h3>
             </div>
@@ -89,12 +89,7 @@
                 <img src="assets/images/Enigme/Pantherenigme2.png" alt="Pantherenigme2">
                 <div class="alphabet">
                     <p class="p1" id="note"></p>
-                    <p class="p2" id="contenu-note"><span>A</span> = A ; <span>B</span> = b ; <span>C</span> = c ; <span>D</span> = d ; <span>E</span> = e ; <span>F</span> = f ; <span>G</span> = g ; <span>H</span> = h ; <span>I</span> = i ; <span>J</span> = j ; 
-
-                        <span>K</span> = k ; <span>L</span> = l ; <span>M</span> = m ; <span>N</span> = n ; <span>O</span> = o ; <span>P</span> = p ; <span>Q</span> = q ; <span>R</span> = r ; <span>S</span> = s ; <span>T</span> = t ;
-                        
-                        <span>U</span> = u ; <span>W</span> = w ; <span>X</span> = x ; <span>Y</span> = y ; <span>Z</span> = z </p>
-                </div>
+                    <p class="p2" id="contenu-note"></div>
                 
                 <!--<div class="pantherenigme2-text2">
                     <p>Le savais tu ? </p>
@@ -140,7 +135,7 @@
     <!-- modal -->
     <div id="myModal" class="modal">
         <div class="modal-content">
-            <span class="close" onclick="hideModal()">&times;</span>
+            <!--<span class="close" onclick="hideModal()">&times;</span>-->
             <h3 id="titre-popup">TON INITIATION EST TERMINEE!</h3>
             <div>
                 <button>REVENIR A L'ACCUEIL</button>
