--- a/enigme.html
+++ b/enigme.html
@@ -136,13 +136,13 @@
     <div id="myModal" class="modal">
         <div class="modal-content">
             <!--<span class="close" onclick="hideModal()">&times;</span>-->
-            <h3 id="titre-popup">TON INITIATION EST TERMINEE!</h3>
-            <div>
-                <button>REVENIR A L'ACCUEIL</button>
+            <h4 id="titre-popup">TON INITIATION EST TERMINEE!</h4>
+            <div class="btn-modal">
+                <button id="btn-retour" onclick="window.location.href='index.html'" >REVENIR A L'ACCUEIL</button>
             </div>
-            <div>
-                <div><img src="" alt=""></div>
-                <div>
+            <div class="fig-time">
+                <div><img src="./assets/images/Enigme/figma_logo.svg" alt=""></div>
+                <div class="times">
                     <p>COMING SOON...</p>
                     <p>00:00: <span id="timeout"></span></p>
                 </div>
