JS enigme switcher

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accueil</title>
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <script src="jquery-3.7.0.min.js" ></script>
+
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/accueil.css">
 </head>
@@ -78,7 +80,7 @@
                     racisme, la colonisation et les violences contre les afro américains. 
                     
                     Ce film marque tout une génération, c’est 100% africain et c’est parfait .</p>
-                <a href="">Voir plus ></a>
+                <a href="#plusplus">Voir plus ></a>
             </div>
 
             <div class="pantherhome1">
@@ -95,7 +97,7 @@
                 </div>
                 <div class="div1 slide">
                     <h2 class="title" id="divTitle1">KILLMONGER</h2>
-                    <p class="bio">
+                    <p class="bio" id="bio1">
                         La sauvagerie de N'Jadaka alors qu'il servait dans une unité d'opérations noires de l'armée américaine lui a valu le surnom de Killmonger. D’origine Wakandaise, et se sentant abandoné par sa nation, il cherche à détroner T’Challa dans une quête vers le pourvoir.
                     </p>
                     <a style="text-decoration: underline;" href="">Voir plus ></a>
@@ -105,7 +107,7 @@
                 </div>
                 <div class="div2 slide">
                     <h2 class="title" id="divTitle2">OKOYE</h2>
-                    <p class="bio">
+                    <p class="bio" id="bio2">
                         Okoye est le général des Dora Milaje (groupe d’élite de femmes guerrières) et le chef des forces armées et des renseignements wakandais. Témoin du couronnement de T'Challa, elle se joint à lui dans de nombreuses aventures
                     </p>
                     <a style="text-decoration: underline;" href="">Voir plus ></a>
@@ -118,7 +120,7 @@
         </section>
 
         <!-------------------- Troisième section ------------------------->
-        <section class="third-section">
+        <section class="third-section" id="plusplus">
             <div class="content">
                 <!-- Partie gauche -->
                 <div class="part-left">
