--- a/enigme.html
+++ b/enigme.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Enigme</title>
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <script src="jquery-3.7.0.min.js" ></script>
+
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/enigme.css">
 </head>
@@ -138,13 +140,13 @@
             <!--<span class="close" onclick="hideModal()">&times;</span>-->
             <h4 id="titre-popup">TON INITIATION EST TERMINEE!</h4>
             <div class="btn-modal">
-                <button id="btn-retour" onclick="window.location.href='index.html'" >REVENIR A L'ACCUEIL</button>
+                <button id="btn-retour">REVENIR A L'ACCUEIL</button>
             </div>
             <div class="fig-time">
                 <div><img src="./assets/images/Enigme/figma_logo.svg" alt=""></div>
                 <div class="times">
                     <p>COMING SOON...</p>
-                    <p>00:00: <span id="timeout"></span></p>
+                    <p id="timeout"></p>
                 </div>
             </div>
         </div>
